add new CV link and change text of project coding languages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h3 class='job-title'>Full Stack Developer</h3>
         </div>
         <div class='nav-icons'>
-            <a href='https://drive.google.com/file/d/1qsvx1kO8dPbigy9QHsBMbHb7W3faWXRC/view?usp=sharing' target="_blank">
+            <a href='https://drive.google.com/file/d/19L5MG6jaxnZW-S8gVrDPh3JZlLkwOWbH/view?usp=drive_link' target="_blank">
                 <i class='bx bx-download'></i>
             </a>
             <a href='https://github.com/ramsey-merdassi' target='_blank'>
@@ -81,7 +81,7 @@
     </section>
     <section class='projects'>
         <div class='project'>
-            <h2>Collector App (html, css, php, sql)</h2>
+            <h2>Collector App (HTML, CSS, PHP, SQL)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/collector_app1.png" alt='collector app screenshot'>
@@ -102,7 +102,7 @@
         PHP shorthand syntax. Building the containers helped me to improve my knowledge of CSS flexbox and I added
         breakpoints/relative units to make the site responsive. I wrote SQL queries to add, extract, and order data.</p>
         <div class='project'>
-            <h2>Film Quote Quiz (html, css, javascript)</h2>
+            <h2>Film Quote Quiz (HTML, CSS, JavaScript)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/film_quiz1.png" alt='film quote quiz screenshot'>
@@ -129,7 +129,7 @@
         project came when click events were being duplicated, causing the quiz to skip quotes and end within a few
         seconds. Solving this problem helped me to see the benefit of using Chrome DevTools for debugging.</p>
         <div class='project'>
-            <h2>Job Listing Website (react, bootstrap)</h2>
+            <h2>Job Listing Website (React, Bootstrap)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/job_listing1.png" alt='job listing website screenshot'>
@@ -151,7 +151,7 @@
         was also beneficial to see how smaller files and a structured file system aid readability.
         </p>
         <div class='project'>
-            <h2>Furniture Store API (php oop, sql)</h2>
+            <h2>Furniture Store API (PHP OOP, SQL)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/furniture_store1.png" alt='furniture store website screenshot'>
@@ -172,7 +172,7 @@
         became more familiar with error handling and providing responses. Overall, I enjoyed writing object-oriented
         code and would like more practise with it.</p>
         <div class='project'>
-            <h2>Academy Portal (slim, javascript)</h2>
+            <h2>Academy Portal (Slim, JavaScript)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/academy_portal1.png" alt='academy portal screenshot'>
@@ -202,7 +202,7 @@
         learning, encouraging team members to address any weaknesses by going out of their comfort zone, and ensuring
         the Trello board was kept organised, with all stories adhering to our agreed Definition of Done.</p>
         <div class='project'>
-            <h2>Journey Planner (react, express, tailwind, sql)</h2>
+            <h2>Journey Planner (React, Express, Tailwind CSS, SQL)</h2>
             <div class='carousel'>
                 <i class='bx bx-chevron-left'></i>
                 <img class='project-img' src="images/journey_planner1.png" alt='journey planner screenshot'>
