--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav>
         <div class="name-title">
-            <h3 class='name'>Ramsey Merdassi</h3>
+            <h3 class='name'>Ramseyyyyyjjjj Merdassi</h3>
             <h3 class='job-title'>Full Stack Developer</h3>
         </div>
         <div class='nav-icons'>
