change title and remove cv/linkedin icons

--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 <body>
     <nav>
         <div class="name-title">
-            <h3 class='name'>Ramseyyyyyjjjj Merdassi</h3>
-            <h3 class='job-title'>Full Stack Developer</h3>
+            <h3 class='name'>Ramsey Merdassi</h3>
+            <h3 class='job-title'>Graduate Full Stack Developer</h3>
         </div>
         <div class='nav-icons'>
-            <a href='https://drive.google.com/file/d/19L5MG6jaxnZW-S8gVrDPh3JZlLkwOWbH/view?usp=drive_link' target="_blank">
-                <i class='bx bx-download'></i>
-            </a>
+<!--            <a href='https://drive.google.com/file/d/19L5MG6jaxnZW-S8gVrDPh3JZlLkwOWbH/view?usp=drive_link' target="_blank">-->
+<!--                <i class='bx bx-download'></i>-->
+<!--            </a>-->
             <a href='https://github.com/ramsey-merdassi' target='_blank'>
                 <i id='github' class='bx bxl-github'></i>
             </a>
-            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>
-                <i class='bx bxl-linkedin'></i>
-            </a>
+<!--            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>-->
+<!--                <i class='bx bxl-linkedin'></i>-->
+<!--            </a>-->
         </div>
     </nav>
     <section class='about-me'>
