--- a/index.html
+++ b/index.html
@@ -23,62 +23,12 @@
             <h3 class='name'>Ramsey Merdassi</h3>
             <h3 class='job-title'>Graduate Full Stack Developer</h3>
         </div>
-        <div class='nav-icons'>
-<!--            <a href='https://drive.google.com/file/d/19L5MG6jaxnZW-S8gVrDPh3JZlLkwOWbH/view?usp=drive_link' target="_blank">-->
-<!--                <i class='bx bx-download'></i>-->
-<!--            </a>-->
+        <div class='github-icon'>
             <a href='https://github.com/ramsey-merdassi' target='_blank'>
                 <i id='github' class='bx bxl-github'></i>
             </a>
-<!--            <a href='https://www.linkedin.com/in/ramsey-merdassi-0868261a4' target='_blank'>-->
-<!--                <i class='bx bxl-linkedin'></i>-->
-<!--            </a>-->
         </div>
     </nav>
-    <section class='about-me'>
-        <p>I have spent most of my working life working in data teams in roles at UCAS, an online university in
-        Australia, the Ministry of Education in New Zealand, and managing a team for a marketing company in Scotland. It
-        was my experience working as part of an agile project team in New Zealand, tasked with creating a new school
-        infrastructure database, that got me interested in software development. In my roles of Regression Tester and
-        Data Quality Analyst, I was able to work with some great people and understand the complexities of creating and
-        launching a software product. It was a lot of fun seeing the product evolve in Sprint Reviews, having Morning
-        Tea get-togethers every Friday with the team, and having the opportunity to train staff in regional offices
-        across New Zealand during the migration phase.</p>
-        <p>After a lot of reflection during the pandemic, I decided to make a career change and return to university. I
-        had studied at university before, although had never achieved a Bachelor's degree. I considered taking a
-        Computer Science or Digital Media program, although opted to take an innovative entrepreneurship program that
-        was adopted from Finland just over a decade ago. This program was called <a href='https://te.uwe.ac.uk/'
-        target='_blank'>Business (Team Entrepreneurship)</a> and involved working in a team of 10-15 people, with the
-        aim of achieving annual business targets through executing an effective strategy. I had some ideas of products I
-        wanted to build and this program gave me the freedom to do this, whilst also testing their value with customers.
-        </p>
-        <p>In my 1st year on the program, I created a discount website aimed at helping students save money at local
-        food and beverage businesses. I was able to attract business customers who saw students as a good market to help
-        them bring in more revenue during quiet periods. At the end of the year, I decided to build a customer loyalty
-        mobile app. I started learning to write code, opting to use Flutter SDK and Dart to make it simpler to develop
-        for cross-platform and Firebase for the database. Over the next 2yrs I failed miserably, completely
-        underestimating the complexities of teaching myself software development.</p>
-        <p>However, through hard work, I was still able to achieve a First Class Honours. I developed a lot of key
-        competencies and learnings throughout this program, which make me a valuable team member, including:</p>
-        <ul>
-            <li>Being able to lead without a title
-            <li>Understanding the importance of following processes
-            <li>Respecting the motivations of peers and not pulling them in a direction they don't want to go
-            <li>Working effectively in a team, including communicating well with difficult individuals, and creating a
-            psychologically safe environment for all
-            <li>Providing constructive feedback that allows team members to reflect on their performance
-            <li>Making effective decisions that will make the business more successful
-            <li>Managing my time and priorities well to ensure work is completed ahead of deadline
-        </ul>
-        <p> Still determined to become competent at programming, after my degree, I enrolled in an in-person <a
-        href='https://io-academy.uk/courses/full-stack-track/' target='_blank'>16wk Full Stack bootcamp</a> in Bath from
-        July-October 2024. This program helped me to address my weaknesses and enabled me to learn in a structured way,
-        initially focusing on HTML/CSS, then building projects with PHP/JavaScript, and next working with libraries and
-        frameworks. This program vastly improved my programming competence thanks to the excellent training I received
-        and well thought through curriculum. I am now looking forward to joining a company to
-        demonstrate the skills I have gained from both of these programs, to improve further, and to help the business
-        grow. Below you'll find some of the projects I worked on during the bootcamp.</p>
-    </section>
     <section class='projects'>
         <div class='project'>
             <h2>Collector App (HTML, CSS, PHP, SQL)</h2>
