--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://2024-ramseym.dev.io-academy.uk/bucket-list-collector-app/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://2024-ramseym.dev.io-academy.uk/bucket-list-collector-app/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/bucket-list-collector-app' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -59,9 +59,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://2024-ramseym.dev.io-academy.uk/2024-jul-fst-film-quote-quiz/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://2024-ramseym.dev.io-academy.uk/2024-jul-fst-film-quote-quiz/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/film-quote-quiz' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -86,9 +86,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://2024-thomask.dev.io-academy.uk/dist/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://2024-thomask.dev.io-academy.uk/dist/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/2024-jul-fst-job-search-fe' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -108,9 +108,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://2024-henryt.dev.io-academy.uk/build/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://2024-henryt.dev.io-academy.uk/build/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/furniture-store-API' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -129,9 +129,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://portal.dev.io-academy.uk/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://portal.dev.io-academy.uk/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/academy-portal' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -159,9 +159,9 @@
                 <i class='bx bx-chevron-right'></i>
             </div>
             <div class="project-links">
-                <a href='https://journeyplannerfe.2024-ramseym.dev.io-academy.uk/' target='_blank'>
-                    <i class='bx bx-link-external'></i>
-                </a>
+<!--                <a href='https://journeyplannerfe.2024-ramseym.dev.io-academy.uk/' target='_blank'>-->
+<!--                    <i class='bx bx-link-external'></i>-->
+<!--                </a>-->
                 <a href='https://github.com/ramsey-merdassi/2024-fst-tube-planner-flex-FE' target='_blank'>
                     <i class='bx bxl-github github-repo'></i>
                 </a>
@@ -182,9 +182,6 @@
         Sprint Review that this would have involved using Dijkstra's algorithm. This project certainly gave me an
         appreciation for the amount of work that's involved in full stack development and the importance of working in
         unison.</p>
-        <p class='project-description'>Now that I have graduated from iO Academy, I am focusing on re-completing team
-        projects to allow me to work on the stories that were assigned to others. I am also
-        working on another side project and revisiting learning Dart/Flutter for mobile app development.</p>
     </section>
     <footer>
         <h3>Contact me:</h3>
@@ -194,10 +191,10 @@
                 <h3>merdassi.r@gmail.com</h3>
             </a>
         </div>
-        <div class='phone-no'>
-            <i class='bx bxs-phone'></i>
-            <h3>07736465394</h3>
-        </div>
+<!--        <div class='phone-no'>-->
+<!--            <i class='bx bxs-phone'></i>-->
+<!--            <h3>07736465394</h3>-->
+<!--        </div>-->
     </footer>
 </body>
 
